--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 
 ### IntelliJ IDEA ###
 /.idea/*.xml
-.idea/sonarlint
+.idea/sonarlint/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
