--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/*.xml
 /.idea/*.xml
 /.idea/sonarlint/securityhotspotstore/
-
 .idea/sonarlint/
 .idea/modules.xml
 .idea/jarRepositories.xml
